# reduceme

./: .gitignore  .hgignore  Makefile.am  README  configure.ac
button/: Makefile.am  buttmis.f  button.f  ifbutton.f  readcbutt.inc  rpgband.f  rpgbegin.f  rpgbegok.f  rpgenv.f
docs/: .index.rst.swp  Makefile  auxiliary_libraries.rst  available_programs.rst  classified_list.rst  conf.py  general_description.rst  index.rst  installation.rst  license_agreement.rst  package_description.rst
docs/aux/: logo_reduceme.tex
files/: HgNe.ldat  Makefile.am  SW_line_list.txt  SW_line_list_Ar.ldat  SW_line_list_Xe.ldat  VLT_FORS2_HgNe.ldat  cuar.ldat  cuarne.ldat  cune.ldat  ext_atmos.ps  extint.ini  extlp.dat_old  extlp.ini  hear.ldat  hgcdzn_keck_lris.ldat  tbd262606  tbd284211  tbd332642  tbd75325  tcygob2  teg131  tfeige110  tfeige34  tfeige66  tfeige67  tg191b2b  tgrw708247  thd192281  thd217086  thd93521  the3  thiltner102  thiltner600  thz44  tkopff27  tlds749b  tsa29130  twolf1346
fspec/: Makefile.am  bicubspl.f  bicubsplx.f  binsearch.f  broaden.f  cauchyfit.f  cfft.f  cfftd.f  chequea_fileindex.f  chrebin.f  downhill.f  fatmext.f  fft2power.f  fftcorrel.f  fftcorrzoom.f  fftcosbell.f  fftkfilter.f  fftprep.f  fintgauss.f  fmean0.f  fmean1.f  fmean2.f  fmedian1.f  fpercent.f  fpoly.f  gauscfit.f  gauscfit_movel.f  gauss2afit.f  gauss2bfit.f  gaussfit.f  gaussfitamp.f  integtab.f  lagrange.f  linefit.f  lininterp.f  ludcmp.f  mideind.f  ordena1f2i.f  ordena1i.f  ordena2f.f  (+17 more)
futils/: Makefile.am  chlower.f  chupper.f  endprogram.f  findmm.f  findmmlmask.f  futils.inc  lrunx.f  read2i.f  readc.f  readf.f  readi.f  readilim.f  retorna_ticks.f  rmblank.f  showperc.f  truebeg.f  truelen.f
help/: LEEME
help/programs/: README  addnf.hlp  adnch.hlp  adnhand.hlp  adnsc.hlp  airmass.hlp  autocos.hlp  basicred.hlp  binning.hlp  broadima.hlp  broadsp.hlp  calambda.hlp  cdisc.hlp  chancoor.hlp  cleanest.hlp  corrext.hlp  corrfft.hlp  creahelp.hlp  ecugal.hlp  exhead.hlp  exheads.hlp  fcalspl.hlp  findarc.hlp  findmax.hlp  fit1dpol.hlp  fit2dpol.hlp  fit2dspl.hlp  fitcdis.hlp  fitdata.hlp  fitlin.hlp  fitshead.hlp  fitstex.hlp  generror.hlp  genimage.hlp  gluesc.hlp  growx.hlp  growy.hlp  hlp.vim  ifilter.hlp  imath.hlp  (+45 more)
red/: Makefile.am  autoplot.f  guessef.f  infilex.f  iofile.inc  my_pgend.f  outfilex.f  pgiden_red.f  pidegter.f  redlib.inc  redlib.inc.in  showhlp.f  welcome.f  zscale.f
scripts/: Makefile.am  RUN  exheads.sh
specials/: date_fj.f  leekenn92.f  running_RUN  simple_read.f  simple_write.f
src/: Makefile.am  addnf.f  adnch.f  adnhand.f  adnsc.f  adnscgrad.f  air2vacuum.f  airmass.f  autocos.f  autocos2.f  basicred.f  binning.f  broadima.f  broadres.f  broadsp.f  calambda.f  cdisc.f  chancoor.f  cleanest.f  corrext.f  corrfft.f  creahelp.f  ecugal.f  esterror.f  exhead.f  exheads.f  fcalspl.f  fcalsplnew.f  fillimage.f  findarc.f  findmax.f  findmax_wl.f  fit1dpol.f  fit2dpol.f  fit2dspl.f  fitcdis.f  fitcdis_new.f  fitdata.f  fitlin.f  fitshead.f  (+67 more)
test/: diff_refr.f  downhill_TOTAL.f  octopus.f  off_extincion.f  offindex.f  testdownhill.f  ucmima.f
