
EXTRA_DIST = cuar.ldat cuarne.ldat cune.ldat \
ext_atmos.ps extch.dat exthawaii.dat extint.dat \
extint.ini extlick.dat extlp.dat extlp.ini \
hear.ldat hgcdzn_keck_lris.ldat HgNe.ldat \
index.dat Makefile.am \
nd03.dat nd06.dat nd09.dat ndfilters.dat \
SW_line_list_Ar.ldat SW_line_list.txt SW_line_list_Xe.ldat \
tbd262606 tbd284211 tbd332642 tbd75325 tcygob2 teg131 \
tfeige110 tfeige34 tfeige66 tfeige67 tg191b2b tgrw708247 \
thd192281 thd217086 thd93521 the3 thiltner102 thiltner600 \
thz44 tkopff27 tlds749b tsa29130 twolf1346 \
ubvresp.dat \
VLT_FORS2_HgNe.ldat
