lib_LTLIBRARIES = libfspec.la
libfspec_la_SOURCES = bicubspl.f bicubsplx.f binsearch.f broaden.f cauchyfit.f \
cfftd.f cfft.f chequea_fileindex.f chrebin.f combpf.f cubspl.f cubsplx.f \
downhill.f factorialpf.f fatmext.f fft2power.f fftcorrel.f fftcorrzoom.f \
fftcosbell.f fftkfilter.f fftprep.f fintgauss.f fmean0.f fmean1.f \
fmean2.f fmedian1.f fpercent.f fpoly.f gauscfit.f gauscfit_movel.f \
gauss2afit.f gauss2bfit.f gaussfitamp.f gaussfit.f integtab.f \
lagrange.f linefit.f lininterp.f ludcmp.f lusolv.f mideind.f ordena1f1i.f \
ordena1f2i.f ordena1f.f ordena1i.f ordena2f.f ordena2i.f pacent.f \
polfit.f polfitsig.f pseudofit.f ranred.f rebining.f \
rinterp.f rvrebin.f scompext.f selbands.f selindex.f sellines.f sexag.f \
shindex.f splfit.f subprece.f ulogreb.f

nodist_libfspec_la_SOURCES = futils.inc redlib.spec

AM_CPPFLAGS = $(CFITSIO_CFLAGS) -I$(top_srcdir)
