lib_LTLIBRARIES = libfutils.la
libfutils_la_SOURCES = chlower.f chupper.f endprogram.f findmm.f findmml.f \
findmmlmask.f futils.inc lrunx.f read2i.f readc.f readf.f readi.f readilim.f \
retorna_ticks.f rmblank.f showperc.f systemfunction.f truebeg.f truelen.f

AM_CPPFLAGS = $(CFITSIO_CFLAGS) -I$(top_srcdir)

