bin_PROGRAMS = addnf adnch adnhand adnsc adnscgrad air2vacuum airmass \
autocos autocos2 basicred binning broadima broadres broadsp calambda cdisc \
chancoor cleanest corrext corrfft creahelp ecugal esterror exhead \
exheads fcalspl fcalsplnew fillimage findarc findmax \
findmax_wl fit1dpol fit2dpol fit2dspl fitcdis fitcdis_new fitdata \
fitlin fitshead fitstex gain generror genimage giveerrf gluesc growx \
growy histogram ifilter ifilter-new imath index interchange_32_64 \
interlines interp \
interpmove irevx irevy istat isubset leefits leefits_new leeposs \
loglin mcolumns midelines miderot midez movel multfit multpol \
nortwi offindex outfitshead plots plotsp3d portable predchan \
prfcal randsc readfits rebincw replacefits \
resample resample_flux rotate rvel rvrelat rvshift rvshiftrot \
rvz sdistor shiftch shpol skysubm snratio stplot sunalpha testrandom \
testwc tfourier vaucoul wcnoarc writeascii writefits writefits_log


BASE = ../button/libbutton.a ../red/libred.a ../futils/libfutils.a ../fspec/libfspec.a
LDADD = $(BASE)
ADDCFITSIO = $(BASE) $(CFITSIO_LIBS)

writefits_log_LDADD = $(ADDCFITSIO)
writefits_LDADD = $(ADDCFITSIO)
leefits_LDADD = $(ADDCFITSIO)
leefits_new_LDADD = $(ADDCFITSIO)
leeposs_LDADD = $(ADDCFITSIO)
replacefits_LDADD = $(ADDCFITSIO)

interchange_32_64_SOURCES = interchange_32_64.c
sunalpha_SOURCES = sunalpha.c

addnf_SOURCES = addnf.f
adnch_SOURCES = adnch.f
adnhand_SOURCES = adnhand.f
adnsc_SOURCES = adnsc.f
adnscgrad_SOURCES = adnscgrad.f
air2vacuum_SOURCES = air2vacuum.f
airmass_SOURCES = airmass.f
autocos_SOURCES = autocos.f
autocos2_SOURCES = autocos2.f
basicred_SOURCES = basicred.f
binning_SOURCES = binning.f
broadima_SOURCES = broadima.f
broadres_SOURCES = broadres.f
broadsp_SOURCES = broadsp.f
calambda_SOURCES = calambda.f
cdisc_SOURCES = cdisc.f
chancoor_SOURCES = chancoor.f
cleanest_SOURCES = cleanest.f
corrext_SOURCES = corrext.f
corrfft_SOURCES = corrfft.f
creahelp_SOURCES = creahelp.f
ecugal_SOURCES = ecugal.f
esterror_SOURCES = esterror.f
exhead_SOURCES = exhead.f
exheads_SOURCES = exheads.f
fcalspl_SOURCES = fcalspl.f
fcalsplnew_SOURCES = fcalsplnew.f
fillimage_SOURCES = fillimage.f
findarc_SOURCES = findarc.f
findmax_SOURCES = findmax.f
findmax_wl_SOURCES = findmax_wl.f
fit1dpol_SOURCES = fit1dpol.f
fit2dpol_SOURCES = fit2dpol.f
fit2dspl_SOURCES = fit2dspl.f
fitcdis_SOURCES = fitcdis.f
fitcdis_new_SOURCES = fitcdis_new.f
fitdata_SOURCES = fitdata.f
fitlin_SOURCES = fitlin.f
fitshead_SOURCES = fitshead.f
fitstex_SOURCES = fitstex.f
gain_SOURCES = gain.f
generror_SOURCES = generror.f
genimage_SOURCES = genimage.f
giveerrf_SOURCES = giveerrf.f
gluesc_SOURCES = gluesc.f
growx_SOURCES = growx.f
growy_SOURCES = growy.f
histogram_SOURCES = histogram.f
ifilter_SOURCES = ifilter.f
ifilter_new_SOURCES = ifilter-new.f
imath_SOURCES = imath.f
index_SOURCES = index.f
interlines_SOURCES = interlines.f
interp_SOURCES = interp.f
interpmove_SOURCES = interpmove.f
irevx_SOURCES = irevx.f
irevy_SOURCES = irevy.f
istat_SOURCES = istat.f
isubset_SOURCES = isubset.f
leefits_SOURCES = leefits.f
leefits_new_SOURCES = leefits_new.f
leeposs_SOURCES = leeposs.f
loglin_SOURCES = loglin.f
mcolumns_SOURCES = mcolumns.f
midelines_SOURCES = midelines.f
miderot_SOURCES = miderot.f
midez_SOURCES = midez.f
movel_SOURCES = movel.f
multfit_SOURCES = multfit.f
multpol_SOURCES = multpol.f
nortwi_SOURCES = nortwi.f
offindex_SOURCES = offindex.f
outfitshead_SOURCES = outfitshead.f
plots_SOURCES = plots.f
plotsp3d_SOURCES = plotsp3d.f
portable_SOURCES = portable.f
predchan_SOURCES = predchan.f
prfcal_SOURCES = prfcal.f
randsc_SOURCES = randsc.f
readfits_SOURCES = readfits.f
rebincw_SOURCES = rebincw.f
replacefits_SOURCES = replacefits.f
resample_SOURCES = resample.f
resample_flux_SOURCES = resample_flux.f
rotate_SOURCES = rotate.f
rvel_SOURCES = rvel.f
rvrelat_SOURCES = rvrelat.f
rvshift_SOURCES = rvshift.f
rvshiftrot_SOURCES = rvshiftrot.f
rvz_SOURCES = rvz.f
sdistor_SOURCES = sdistor.f
shiftch_SOURCES = shiftch.f
shpol_SOURCES = shpol.f
skysubm_SOURCES = skysubm.f
snratio_SOURCES = snratio.f
stplot_SOURCES = stplot.f
testrandom_SOURCES = testrandom.f
testwc_SOURCES = testwc.f
tfourier_SOURCES = tfourier.f
vaucoul_SOURCES = vaucoul.f
wcnoarc_SOURCES = wcnoarc.f
writeascii_SOURCES = writeascii.f
writefits_SOURCES = writefits.f
writefits_log_SOURCES = writefits_log.f


